nav elements align fixed

--- a/public/styles/template.css
+++ b/public/styles/template.css
@@ -40,8 +40,8 @@ nav {
 
 nav > div > ul {
   display: grid;
-  grid-template-columns: repeat(5, max-content);
-  justify-content:start;
+  grid-template-columns: repeat(auto-fit, minmax(20%, 1fr));
+
 }
 
 /* Display mobile */
@@ -57,22 +57,27 @@ nav > div > ul {
 
 nav > div > ul > li {
   list-style: none;
-  padding: 12px 24px;
+  padding: 0;
   cursor: pointer;
 }
 
 nav > div > ul > li:nth-child(1) {
   background: var(--color-white);
   color: var(--color-black);
-  padding: 12px 24px !important;
   text-transform: uppercase;
   font-weight: bold;
 }
 
 nav > div > ul > li > a{
+
+  text-align: center;
   color: inherit;
   text-decoration: none;
   cursor: inherit;
+}
+
+nav > div > ul > li > a > span, nav > div > ul > li > a > i {
+  padding: 8px 16px;
 }
 
 header {
